--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="container">
 	<header>
-		<h1 id="name">Your Name</h1>
+		<h1 id="name">Evelyn Fang</h1>
 		
 		<div id="designation">
 		
